--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,7 @@ body {
     $dot-color;
     background-size: $dot-space $dot-space;
     min-height: 100vh;
+    max-width: 100vw;
     margin: 0;
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
