--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,14 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-// Colors
-$bg-color: hsl(210, 5, 18);
-$dot-color: rgb(171, 163, 194);
-
-// Dimensions
-$dot-size: 1px;
-$dot-space: 22px;
-
 body {
-    background-color: #282c34;
-    background:
-    linear-gradient(90deg, $bg-color ($dot-space - $dot-size), transparent 1%) center,
-    linear-gradient($bg-color ($dot-space - $dot-size), transparent 1%) center,
-    $dot-color;
-    background-size: $dot-space $dot-space;
     min-height: 100vh;
     max-width: 100vw;
     margin: 0;
